--- a/Codepen/styles/footer.css
+++ b/Codepen/styles/footer.css
@@ -1,5 +1,3 @@
-/*Footer*/
-
 .footer {
     width: 100%;
     display: flex;
@@ -9,10 +7,14 @@
 
 .footer > .footer-items {
     width: 25%;
-    padding: 15px 0px;
+    padding: 1% 0px;
     border: 0.2px solid white;
     color: white;
-    background-color: darkslategrey;
+    background-color: darkgrey;
     display: grid;
     text-align: center;
+}
+
+.footer > .footer-items > .footer-items-text:before {
+    content: 'CodePen for ';
 }
