--- a/Codepen/styles/hero.css
+++ b/Codepen/styles/hero.css
@@ -1,28 +1,25 @@
-/* Hero body section */
-
 .hero-section {
     width: 100%;
-    margin-top: 2%;
-    margin-left: 2%;
+    margin-top: 5%;
+    margin-left: 5%;
     display: flex;
-    box-shadow: 100% rgb(97, 177, 97);
+    background-color: gray;
 }
 
 .hero-section > .hero-left-column {
     width: 60%;
-    margin: 1%;
+    margin: 3%;
     display: grid;
     grid-column: 1fr;
-    /* align-items: initial; */
 }
 
 .hero-section > .hero-left-column > .top-text {
-    padding-right: 6%;
+    padding-right: 16%;
 }
 
 .hero-section > .hero-left-column > .top-text > .title > .title-text {
     font-size: 2.2em;
-    padding-bottom: 2%;
+    padding-bottom: 3%;
     color: white;
 }
 
@@ -44,13 +41,13 @@
 .hero-section > .hero-left-column > .bottom-btns > .left-btn button {
     padding: 1% 2%;
     font-size: 1.8em;
-    background-color: lightgreen;
+    background-color: green;
     border: none;
     border-radius: 3px;
 }
 
 .hero-section > .hero-left-column > .bottom-btns > .right-btn button{
-    padding: 1% 2%;
+    padding: 3% 2%;
     font-size: 1.8em;
     background-color: black;
     color: white;
@@ -59,7 +56,7 @@
 }
 
 .hero-section > .hero-right-column {
-    width: 40%;
+    width: 60%;
     display: grid;
     grid-column: 1fr;
     align-items: center;
@@ -74,14 +71,14 @@
 
 .hero-section > .hero-right-column > .above-link h2 {
     color: white;
-    margin-right: 1%;
+    margin-right: 0.5%;
 }
 
 .hero-section > .hero-right-column > .above-link a {
-    color: cornflowerblue;
-    text-decoration: none;
+    color: powderblue;
 }
 
 .hero-section > .hero-right-column > .image img {
-    width: 50%;
+    width: 90%;
+    margin: 0% 0% 0% -0.6%;
 }
